# Modeling

./: C3_Exercise_16_Load3DModel_Task1 (1).cpp  C3_Exercise_16_Load3DModel_Task1.cpp  C3_Exercise_16_Load3DModel_Task2 (1).cpp  C3_Exercise_16_Load3DModel_Task3.cpp  Prueba.cpp  app  examen_modelBatman.cpp
Dependencies/include/SOIL2/: SOIL2.h
OpenGL/: C3_Exercise_16_Load3DModel_Task3 (1).cpp  C3_Exercise_16_Load3DModel_Task3.cpp  CMakeLists.txt
OpenGL/model/bridge/: bridge.mtl
OpenGL/model/city/: city.mtl
OpenGL/model/orca/: orca.mtl
OpenGL/model/train/: train.mtl
app.dSYM/Contents/Resources/DWARF/: app
